<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/favorite_menu"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/title_favorite"
        android:iconTint="@color/white"
        app:showAsAction="always" />

    <item
        android:id="@+id/setting"
        android:title="@string/theme"
        android:icon="@drawable/baseline_settings_24"
        app:showAsAction="always"
        />
</menu>